--- a/templates/listings/search.html
+++ b/templates/listings/search.html
@@ -1,6 +1,8 @@
 {% extends 'base.html' %}
 {% load humanize %}
 
+{% block title %} | Search Results{% endblock %}   <!--Adding dynamic page names-->
+
 {% block content %}
 
 <section id="showcase-inner" class="showcase-search text-white py-5">
