--- a/templates/pages/index.html
+++ b/templates/pages/index.html
@@ -2,6 +2,8 @@
 
 {% load humanize %}
 
+{% block title %} | Welcome{% endblock %}   <!--Adding dynamic page names-->
+
 {% block content %}
   <!-- Showcase -->
   <section id="showcase">
@@ -65,6 +67,8 @@
     </div>
   </section>
 
+  <!-- Alerts -->
+    {% include 'partials/_alerts.html' %}
   <!-- Listings -->
   <section id="listings" class="py-5">
     <div class="container">
